Made small changes to css, to make it look better on mobile, and fixed grid resizing issues on home screen

--- a/Src/Home/home.css
+++ b/Src/Home/home.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding-top: 20px;
     padding-bottom: 50px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
 
     --activityWidth: 350px;
@@ -22,8 +22,8 @@ body {
     margin: 0 auto;
 }
 .activity {
-    height: 400px;
-    width: 100%;
+    height: 300px;
+    width: 80%;
 
     background-color: rgb(225, 225, 225);
     border-radius: 20px;
@@ -31,10 +31,18 @@ body {
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: max-content auto 20px;
+    
+    transition: 100ms;
 }
 .activity:hover {
     background-color: rgb(190, 190, 190);
 }
+@media (pointer:coarse) {
+    .activity:active {
+        background-color: rgb(190, 190, 190);
+    }
+}
+
 .activityTitle {
     color: var(--fontColour);
 }
@@ -52,17 +60,19 @@ body {
     grid-template-columns: 100%;
     grid-template-rows: 20% 80%;
 
-    /*background-color: #00000050;*/
     transition: 500ms;
 }
 #popupContent {
     height: 100%;
     width: 100%;
-    padding: 5px;
+    padding: 0;
 
+    border-top: 1px solid rgb(190, 190, 190);;
     background-color: rgb(245, 245, 245);
     box-shadow: 150px 150px 150px 150px #888888;
     border-radius: 15px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
 }
 .popupButton {
     height: 100px;
