--- a/Src/Multiplayer/multiplayer.css
+++ b/Src/Multiplayer/multiplayer.css
@@ -1,7 +1,7 @@
 /* GENERIC */
 body {
     margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
 
     --themeColour: #123456;
@@ -57,13 +57,14 @@ header {
 
     color: var(--themeColour);
     background-color: rgb(245, 245, 245);
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 main {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 10% 40% 50%;
+    grid-template-rows: 10% max-content max-content auto;
+    gap: 50px;
     place-items: center;
 }
 
@@ -120,10 +121,11 @@ main {
     width: max-content;
     text-align: center;
 
-    font-size: 1.4rem !important;
+    color: inherit;
     background-color: rgb(225, 225, 225);
     border: none;
     border-radius: 5px;
+    font-size: 1.4rem !important;
 
     transition: 100ms;
 }
@@ -143,6 +145,7 @@ main {
     height: auto;
     width: 50%;
     margin: 0;
+    padding: 0;
 
     color: white;
     border: none;
