--- a/Src/Quiz/quiz.css
+++ b/Src/Quiz/quiz.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
 
     --optionBorderRadius: 50px;
@@ -37,13 +37,18 @@ body {
     display: grid; /* To center text*/
     place-content: center;
 
-    font-size: 5rem;
+    font-size: 3.5rem;
     word-break: break-all;
 
     transition: 500ms;
 }
-.option:hover {
+.option:active {
     background-color: rgb(190, 190, 190);
+}
+@media not all and (pointer: coarse) {
+    .option:hover {
+        background-color: rgb(190, 190, 190);
+    }
 }
 
 #timeTaken {
